--- a/app/angular.json
+++ b/app/angular.json
@@ -89,7 +89,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "zg:build"
+            "browserTarget": "zg:build",
+            "proxyConfig": "./proxy.config.json"
           },
           "configurations": {
             "production": {
