--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "9.1.1",
     "@angular/platform-browser-dynamic": "9.1.1",
     "@angular/router": "9.1.1",
+    "@jaspero/ng-helpers": "3.4.0",
     "@scullyio/init": "0.0.28",
     "@scullyio/ng-lib": "0.0.22",
     "@scullyio/scully": "0.0.91",
