--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -40,6 +40,13 @@ blocks: &blocks
             - { label: "Title", name: "title", widget: "string", requried: true }
             - { label: "Author", name: "author", widget: "string", requried: false }
             - { label: "Content", name: "content", widget: "markdown", requried: true }
+    - label: "Two Block Text"
+      name: "twoBlockText"
+      widget: "object"
+      fields:
+        - { label: "Title", name: "title", widget: "string", required: false }
+        - { label: "Sub Title", name: "subTitle", widget: "string", required: false }
+        - { label: "Content", name: "content", widget: "markdown", requried: true }
 
 meta: &meta
   label: "Meta"
