--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "build:prod": "ng build --prod",
-    "build:scully": "scully --nw",
+    "build:scully": "scully --nw --scanRoutes",
     "scully": "scully --scanRoutes",
     "scully:serve": "scully serve"
   },
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "9.1.1",
     "@angular/platform-browser-dynamic": "9.1.1",
     "@angular/router": "9.1.1",
+    "@angular/service-worker": "9.1.1",
     "@jaspero/ng-helpers": "3.4.0",
     "@scullyio/init": "0.0.28",
     "@scullyio/ng-lib": "0.0.22",
