Update Settings “settings”

--- a/public/collections/settings.json
+++ b/public/collections/settings.json
@@ -7,6 +7,10 @@
     {
       "title": "Example",
       "link": "/example"
+    },
+    {
+      "title": "About",
+      "link": "/about"
     }
   ]
 }
