Update Settings “settings”

--- a/public/collections/settings.json
+++ b/public/collections/settings.json
@@ -11,6 +11,10 @@
     {
       "title": "About",
       "link": "/about"
+    },
+    {
+      "title": "Lab Members",
+      "link": "/lab-members"
     }
   ]
 }
