landing block added

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -56,6 +56,14 @@ blocks: &blocks
         - { label: "Content", name: "content", widget: "markdown", requried: true }
         - { label: "Image", name: "image", widget: "image", requried: true }
 
+    - label: "Landing block"
+      name: "landingBlock"
+      widget: "object"
+      fields:
+        - { label: "Title", name: "title", widget: "string", required: false }
+        - { label: "Sub Title", name: "subTitle", widget: "string", required: false }
+        - { label: "Image", name: "image", widget: "image", requried: true }
+
 meta: &meta
   label: "Meta"
   name: "meta"
