Update Settings “settings”

--- a/public/collections/settings.json
+++ b/public/collections/settings.json
@@ -15,6 +15,10 @@
     {
       "title": "Lab Members",
       "link": "/lab-members"
+    },
+    {
+      "title": "Research",
+      "link": "/research"
     }
   ]
 }
