--- a/public/collections/settings.json
+++ b/public/collections/settings.json
@@ -19,6 +19,10 @@
     {
       "title": "Example",
       "link": "/example"
+    },
+    {
+      "title": "Publications",
+      "link": "/publications"
     }
   ]
 }
