Update Settings “settings”

--- a/public/collections/settings.json
+++ b/public/collections/settings.json
@@ -23,6 +23,10 @@
     {
       "title": "Example",
       "link": "/example"
+    },
+    {
+      "title": "News",
+      "link": "/news"
     }
   ]
 }
