Update Settings “settings”

--- a/public/collections/settings.json
+++ b/public/collections/settings.json
@@ -27,6 +27,10 @@
     {
       "title": "Example",
       "link": "/example"
+    },
+    {
+      "title": "Other Information",
+      "link": "/other-info"
     }
   ]
 }
