Update Settings “settings”

--- a/public/collections/settings.json
+++ b/public/collections/settings.json
@@ -31,6 +31,10 @@
     {
       "title": "Example",
       "link": "/example"
+    },
+    {
+      "title": "Photo Gallery",
+      "link": "/photo-gallery"
     }
   ]
 }
