Update Settings “settings”

--- a/public/collections/settings.json
+++ b/public/collections/settings.json
@@ -35,6 +35,10 @@
     {
       "title": "Example",
       "link": "/example"
+    },
+    {
+      "title": "Contact",
+      "link": "/contact"
     }
   ]
 }
