chore(images-block) adding data to blocks

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -46,9 +46,10 @@ blocks: &blocks
       name: "twoBlockText"
       widget: "object"
       fields:
-        - { label: "Title", name: "title", widget: "string", required: false }
-        - { label: "Sub Title", name: "subTitle", widget: "string", required: false }
-        - { label: "Content", name: "content", widget: "markdown", requried: true }
+        - { label: "Name", name: "name", widget: "string", required: false }
+        - { label: "Info", name: "info", widget: "string", required: false }
+        - { label: "Bio", name: "bio", widget: "markdown", requried: true }
+        - { label: "Bio Two", name: "bioTwo", widget: "markdown", requried: true }
 
     - label: "Test block"
       name: "testBlock"
