chore(portfolio) layout and values for portfolio-block

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -31,7 +31,7 @@ blocks: &blocks
       widget: "object"
       fields:
         - { label: "Title", name: "title", widget: "string", required: false }
-        - { label: "Sub Title", name: "subTitle", widget: "string", required: false }
+        - { label: "Subtitle", name: "subTitle", widget: "string", required: false }
         - label: "Features"
           name: "features"
           widget: "list"
