--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -151,7 +151,7 @@ collections:
     label: "Research"
     extension: "json"
     format: "json"
-    folder: "public/collections/research"
+    folder: "public/collections/research.json"
     create: true
     slug: "{{slug}}"
     editor:
