chore(config.yml) adding research collection trough config.yml

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -158,6 +158,7 @@ collections:
       preview: false
     fields:
       - { label: "Title", name: "title", widget: "string" }
+      - { label: "Author", name: "author", widget: "string" }
       - { label: "Description", name: "description", widget: "markdown" }
       - { label: "Image", name: "image", widget: "image" }
       - <<: *meta
