Update Settings “settings”

--- a/public/collections/settings.json
+++ b/public/collections/settings.json
@@ -5,8 +5,8 @@
       "link": "/"
     },
     {
-      "title": "Research",
-      "link": "/research"
+      "title": "Researches",
+      "link": "/researches"
     },
     {
       "title": "Lab Members",
