--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -172,6 +172,7 @@ collections:
     fields:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Author", name: "author", widget: "string" }
+      - { label: "Date", name: "date", widget: "string" }
       - { label: "Description", name: "description", widget: "text" }
       - { label: "Image", name: "image", widget: "image" }
       - <<: *meta
