--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -186,9 +186,9 @@ collections:
     editor:
       preview: false
     fields:
+      - { label: "Name", name: "name", widget: "string" }
       - { label: "Title", name: "title", widget: "string" }
-      - { label: "Author", name: "author", widget: "string" }
       - { label: "Description", name: "description", widget: "text" }
-      - { label: "Image", name: "image", widget: "image" }
+      - { label: "Link", name: "link", widget: "text" }
       - <<: *meta
       - { label: "Body", name: "body", widget: "markdown" }
