--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -201,7 +201,7 @@ collections:
     editor:
       preview: false
     fields:
-      - { label: "Name", name: "name", widget: "string" }
+      - { label: "Title", name: "title", widget: "string" }
       - { label: "Description", name: "description", widget: "text" }
       - { label: "Image", name: "image", widget: "image" }
       - <<: *meta
