--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -186,12 +186,13 @@ collections:
     editor:
       preview: false
     fields:
-      - { label: "Name", name: "name", widget: "string" }
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Description", name: "description", widget: "text" }
-      - { label: "Image", name: "image", widget: "image" }
-      - <<: *meta
-      - { label: "Body", name: "body", widget: "markdown" }
+      - { label: "Year", name: "year", widget: "string" }
+        fields:
+          - { label: "Name", name: "name", widget: "string" }
+          - { label: "Title", name: "title", widget: "string" }
+          - { label: "Description", name: "description", widget: "text" }
+          - <<: *meta
+          - { label: "Body", name: "body", widget: "markdown" }
 
   - name: "lab-members"
     label: "Lab-members"
