feat: connected news block; sorting publications and lab-members;

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -97,6 +97,15 @@ blocks: &blocks
             - { label: "Author/Name", name: "name", widget: "string", required: false }
             - { label: "Content", name: "content", widget: "string", required: false }
 
+    - label: "News Block"
+      name: "newsBlock"
+      widget: "object"
+      fields:
+        - { label: "Title", name: "title", widget: "string", required: false }
+        - { label: "Subtitle", name: "subTitle", widget: "string", required: false }
+        - { label: "Count", name: "count", widget: "number", requred: false }
+
+
 meta: &meta
   label: "Meta"
   name: "meta"
@@ -176,6 +185,7 @@ collections:
       - { label: "Date", name: "date", widget: "string" }
       - { label: "Description", name: "description", widget: "text" }
       - { label: "Image", name: "image", widget: "image" }
+      - { label: "Featured", name: "featured", widget: "boolean" }
       - <<: *meta
       - { label: "Body", name: "body", widget: "markdown" }
 
@@ -212,5 +222,6 @@ collections:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Description", name: "description", widget: "text" }
       - { label: "Image", name: "image", widget: "image" }
+      - { label: "Order", name: "order", widget: "number" }
       - <<: *meta
       - { label: "Body", name: "body", widget: "markdown" }
