--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -176,6 +176,7 @@ collections:
       - { label: "Author", name: "author", widget: "string" }
       - { label: "Description", name: "description", widget: "text" }
       - { label: "Image", name: "image", widget: "image" }
+      - { label: "Featured", name: "featured", widget: "boolean" }
       - <<: *meta
       - { label: "Body", name: "body", widget: "markdown" }
 
