feat(config.yml): added fields for CMS

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -234,6 +234,24 @@ collections:
           - { label: "Description", name: "description", widget: "text" }
           - { label: "Link", name: "link", widget: "text" }
 
+  - name: "photo-gallery"
+    label: "Photo-gallery"
+    folder: "public/collections/photo-gallery"
+    create: true
+    slug: "{{slug}}"
+    identifier_field: "year"
+    editor:
+      preview: false
+    fields:
+      - label: "Year"
+        name: "year"
+        widget: "string"
+      - label: "Image Gallery"
+        name: "imageGallery"
+        widget: "list"
+        fields:
+          - { label: "Image", name: "image", widget: "image" }
+
 
 
 
