--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -76,7 +76,17 @@ blocks: &blocks
         - { label: "Image", name: "image", widget: "image", requried: true }
         - { label: "Description", name: "description", widget: "string", required: false }
 
-    - label: "Images Block"
+    - label: "Contact Block"
+      name: "contactBlock"
+      widget: "object"
+      fields:
+        - { label: "Title", name: "title", widget: "string", required: false }
+        - { label: "Image", name: "image", widget: "image", requried: true }
+        - { label: "Description", name: "description", widget: "string", required: false }
+        - { label: "Name", name: "name", widget: "string", required: false }
+        - { label: "Subtitle", name: "subTitle", widget: "string", required: false
+
+                                                                      - label: "Images Block"
       name: "imagesBlock"
       widget: "object"
       fields:
