--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -268,6 +268,7 @@ collections:
         widget: "list"
         fields:
           - { label: "Thumbnail Image", name: "thumbImg", widget: "image" }
+          - { label: "Full Image", name: "fullImg", widget: "image" }
 
 
 
