--- a/.github/workflows/app-ci.workflow.yml
+++ b/.github/workflows/app-ci.workflow.yml
@@ -15,7 +15,7 @@ jobs:
 
     steps:
       - name: Checkout Repo
-        uses: actions/checkout@master
+        uses: actions/checkout@v1
       - name: Install Dependencies
         run: |
           npm ci
