--- a/app/angular.json
+++ b/app/angular.json
@@ -47,7 +47,7 @@
             "tsConfig": "tsconfig.app.json",
             "aot": true,
             "assets": [
-              "src/favicon.ico",
+              "src/favicon.png",
               "src/assets",
               {
                 "input": "../public/collections",
