--- a/app/package.json
+++ b/app/package.json
@@ -25,7 +25,7 @@
     "@scullyio/init": "0.0.28",
     "@scullyio/ng-lib": "0.0.24",
     "@scullyio/scully": "0.0.94",
-    "marked": "^1.0.0",
+    "marked": "1.0.0",
     "rxjs": "6.5.4",
     "tslib": "1.10.0",
     "zone.js": "0.10.2"
@@ -35,12 +35,12 @@
     "@angular/cli": "9.1.1",
     "@angular/compiler-cli": "9.1.1",
     "@angular/language-service": "9.1.1",
-    "@gammastream/scully-plugin-http404": "0.0.1",
-    "@gammastream/scully-plugin-sitemap": "0.0.5",
+    "@gammastream/scully-plugin-http404": "1.0.1",
+    "@gammastream/scully-plugin-sitemap": "1.0.0",
     "@notiz/scully-plugin-lazy-images": "0.2.7",
-    "@types/marked": "^0.7.4",
+    "@types/marked": "0.7.4",
     "@types/node": "12.11.1",
-    "scully-plugin-minify-html": "2.3.1",
+    "scully-plugin-minify-html": "3.1.2",
     "ts-node": "8.3.0",
     "tslint": "6.1.0",
     "typescript": "3.8.3"
