--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -185,7 +185,7 @@ collections:
     fields:
       - label: "Year"
         name: "year"
-        widget: "string"
+        widget: "number"
       - label: "Publications"
         name: "publications"
         widget: "list"
